modules/tools/styles/mw.cx.tools.LinkTool.less
@import '../../widgets/common/ext.cx.common.less';

.cx-card-sourcelink,
.cx-card-targetlink {
	padding-left: 30%;
	background-repeat: no-repeat;
	.background-image-svg('../images/link_lightgray.svg', '../images/link_lightgray.png');
	background-size: 30% 100%;
	background-position: top left;
	transition: margin 0.3s;
	min-height: 100px;

	.cx-widget-translationtool-header {
		padding: 0;
		margin: 0;

		.card__title--language {
			float: right;
		}
	}
	.cx-widget-translationtool-container {
		.cx-tools-link-info {
			.mw-ui-one-whole;
		}

		.cx-tools-link-text {
			padding: 5px 0;
			vertical-align: top;
			color: #0645ad;
			font-size: large;
		}

		.cx-tools-link-desc {
			padding: 5px 0;
			vertical-align: top;
			color: @gray-dark;
		}
	}
	.cx-widget-translationtool-actions {
		.cx-tools-link-add-button,
		.cx-tools-link-remove-button {
			.mw-ui-one-half;
			margin-right: 0;
		}
	}
}

// Stack the source and target link cards
.cx-card-sourcelink + .cx-card-targetlink {
	margin-top: -90px;
}

.cx-card-sourcelink:hover + .cx-card-targetlink {
	margin-top: 0;
}

